--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,18 @@ plugins {
 }
 
 group = 'com.example'
-version = '0.0.1-SNAPSHOT'
+// version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+
+version='1.0.0'
+
+task incrementVersion {
+    String minor=version.substring(version.lastIndexOf('.')+1)
+    int m=minor.toInteger()+1
+    String major=version.substring(0,version.length()-1)
+    String s=buildFile.getText().replaceFirst("version='$version'","version='"+major+m+"'")
+    buildFile.setText(s)
+}
 
 configurations {
     developmentOnly
