--- a/build.gradle
+++ b/build.gradle
@@ -36,3 +36,12 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+tasks.jar {
+    enabled = false
+}
+
+tasks.bootJar {
+    enabled = true
+    mainClassName = "com.example.demo.DemoApplication"
+}
